--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}  # Your Docker Hub username
+        password: ${{ secrets.DOCKER_TOKEN }}     # The access token stored as a secret
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
